MFG Ready Version/force-app/main/default/objects/mfg_Asset_Service__c/mfg_Asset_Service__c.object-meta.xml
<CustomObject>
    <label>Asset Service</label>
    <nameField>
        <displayFormat>AS-{YY}-{0000000000}</displayFormat>
        <label>Asset Service Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>