MFG Ready Version/force-app/main/default/objects/mfg_Asset_Service__c/fields/mfg_Asset__c.field-meta.xml
<CustomField>
    <fullName>mfg_Asset__c</fullName>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Asset Services</relationshipLabel>
    <relationshipName>Asset_Services</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>