MFG Ready Version/force-app/main/default/objects/mfg_Asset_Service__c/fields/mfg_Labor_Covered__c.field-meta.xml
<CustomField>
    <fullName>mfg_Labor_Covered__c</fullName>
    <label>Labor Covered</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>