MFG Ready Version/force-app/main/default/objects/mfg_Asset_Service__c/fields/mfg_Service_Applicable__c.field-meta.xml
<CustomField>
    <fullName>mfg_Service_Applicable__c</fullName>
    <formula>IF(
    ISBLANK( mfg_Service_End_Date__c ),
    TRUE,
    mfg_Service_End_Date__c &gt;= TODAY()
)</formula>
    <inlineHelpText>Indicates whether the service is applicable for the asset. If the expiration date is blank, the service is considered valid for a lifetime. If the expiration date is in the past, the service is not applicable.</inlineHelpText>
    <label>Service Applicable</label>
    <type>Checkbox</type>
</CustomField>