MFG Ready Version/force-app/main/default/objects/mfg_Asset_Service__c/fields/mfg_Service_Covered_Unit_Of_Time__c.field-meta.xml
<CustomField>
    <fullName>mfg_Service_Covered_Unit_Of_Time__c</fullName>
    <label>Service Covered Unit Of Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>mfg_Unit_Of_Time</valueSetName>
    </valueSet>
</CustomField>