MFG Ready Version/force-app/main/default/objects/mfg_Asset_Service__c/fields/mfg_Service_End_Date__c.field-meta.xml
<CustomField>
    <fullName>mfg_Service_End_Date__c</fullName>
    <label>Service End Date</label>
    <type>Date</type>
</CustomField>