MFG Ready Version/force-app/main/default/objects/mfg_Asset_Service__c/fields/mfg_Service_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>mfg_Service_Start_Date__c</fullName>
    <label>Service Start Date</label>
    <type>Date</type>
</CustomField>