MFG Ready Version/force-app/main/default/objects/mfg_Asset_Service__c/fields/mfg_Service_Term__c.field-meta.xml
<CustomField>
    <fullName>mfg_Service_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Term</label>
    <referenceTo>mfg_Service_Term__c</referenceTo>
    <relationshipLabel>Asset Services</relationshipLabel>
    <relationshipName>Asset_Services</relationshipName>
    <type>Lookup</type>
</CustomField>