MFG Ready Version/force-app/main/default/objects/mfg_Asset_Service__c/fields/mfg_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>mfg_Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Extended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>